feat: initialize Vue application with routing and server setup
- Added main entry point for Vue application with router integration.
- Implemented router configuration with dynamic route loading.
- Defined application routes for home and users.
- Created API endpoint for users with a simple message response.
- Set up server with framework runtime, serving static files and API.
- Introduced User type definition for type safety.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "fs-extra": "*",
     "fast-glob": "*"
+  },
+  "devDependencies": {
+    "typescript": "*",
+    "@types/node": "*",
+    "@types/fs-extra": "*"
   }
 }
