--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@myfw/runtime",
+  "name": "@bun-elysia-vue-fs/runtime",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
