--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfw-monorepo",
+  "name": "bun-elysia-vue-fs-monorepo",
   "private": true,
   "version": "0.1.0",
   "workspaces": [
