feat: add CLI wrapper to support bun and node execution
chore: rename package from @bun-elysia-vue-fs/runtime to bev-fs and update version to 0.1.7

chore: update TypeScript configuration for better compatibility and stricter checks

fix: modify dev scripts in template-default for improved server and client builds

refactor: update server index to import createFrameworkServer from bev-fs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bun-elysia-vue-fs-monorepo",
+  "name": "bev-fs-monorepo",
   "private": true,
   "version": "0.1.0",
   "workspaces": [
