feat(api): implement product and user management endpoints
- Added product API with GET and POST methods for listing and creating products.
- Implemented user API with GET and POST methods for listing and creating users.
- Introduced in-memory store for products and users.
- Created shared TypeScript types for products and users to ensure type safety across the application.
- Enhanced server routing to support dynamic API endpoints for product management.
- Developed a type-safe API client for frontend communication with the backend.
- Updated Vite configuration to support proxying API requests during development.
- Added initial Vue components for product and user management in the client application.

--- a/packages/cli/src/template/package.json
+++ b/packages/cli/src/template/package.json
@@ -11,7 +11,7 @@
     "build": "bun run build:client && bun run build:server"
   },
   "dependencies": {
-    "bev-fs": "latest",
+    "bev-fs": "0.2.0",
     "elysia": "*",
     "@elysiajs/static": "*",
     "vue": "*",
