--- a/packages/cli/src/template/package.json
+++ b/packages/cli/src/template/package.json
@@ -11,7 +11,7 @@
     "build": "bun run build:client && bun run build:server"
   },
   "dependencies": {
-    "bev-fs": "0.2.0",
+    "bev-fs": "latest",
     "elysia": "*",
     "@elysiajs/static": "*",
     "vue": "*",
