feat: Implement hierarchical middleware chaining and enhance error handling
- Added support for hierarchical middleware inheritance in the framework, allowing parent route middleware to automatically apply to child routes.
- Introduced validation for server configuration and environment variables to ensure proper setup.
- Enhanced error handling with custom errors for configuration and route discovery failures.
- Improved logging middleware to include request timing and detailed logging for each request.
- Updated route handlers to support middleware at both route and method levels, allowing for more granular control.
- Added new middleware for CORS and response compression to improve API security and performance.
- Refactored existing routes to utilize the new middleware structure and improve code organization.
- Updated documentation to reflect changes in middleware patterns and usage examples.

--- a/packages/framework/bunfig.toml
+++ b/packages/framework/bunfig.toml
@@ -1,9 +1,11 @@
-[watch]
-# configure watch if needed
+# Bun configuration for bev-fs framework package
+# https://bun.sh/docs/runtime/bunfig
 
 [run]
 # Optimization level for runtime
 logLevel = "warn"
+
+# Allow external imports
 hot = false
 
 [test]
@@ -12,5 +14,5 @@ root = "src"
 testTimeout = 5000
 
 [install]
-# Dependency resolution
+# Dependency resolution behavior
 peer = true
