feat: add testbed setup scripts for development and production environments

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "bootstrap": "bun install",
     "publish": "./scripts/publish.sh",
-    "dev": "./scripts/testbed.sh"
+    "dev": "./scripts/testbed-dev.sh",
+    "start": "./scripts/testbed-prod.sh"
   }
 }
