--- a/packages/cli/src/base/package.json
+++ b/packages/cli/src/base/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently \"bun src/server/index.ts\" \"vite\"",
     "build:client": "vite build",
     "build:server": "bun build src/server/index.ts --outdir dist/server --external:bev-fs --target=bun",
-    "build": "bun run build:client && bun run build:server"
+    "build": "bun run build:client && bun run build:server",
+    "start": "bun dist/server/index.js"
   },
   "dependencies": {
     "bev-fs": "latest",
