feat: restructure client and shared components, remove unused files
- Added new router components for Home, NotFound, Product, and ProductProgress.
- Removed old router components and pages from the client-tailwind template.
- Deleted unused composables related to product API and file upload.
- Consolidated shared resources and updated utility functions for better file management.
- Updated tsconfig to exclude unnecessary directories.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,5 +9,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "src/template"]
+  "exclude": ["node_modules", "dist", "src/template", "src/base", "src/shared-template"]
 }
