test: Add comprehensive tests for middleware and shared utilities
- Implement tests for compression middleware, ensuring proper functionality and response handling.
- Add tests for CORS middleware, covering various configurations and header settings.
- Create tests for logging middleware, including request logging and timing measurements.
- Introduce tests for shared route creation utilities, validating path conversions and index file recognition.
- Develop tests for framework types, ensuring correct structure and optional properties in HealthCheckResponse and context interfaces.
- Add a script for building and testing the framework and CLI, enhancing the testing workflow.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "bun install",
     "publish": "./scripts/publish.sh",
     "dev": "./scripts/testbed-dev.sh",
-    "start": "./scripts/testbed-prod.sh"
+    "start": "./scripts/testbed-prod.sh",
+    "test:testbed": "./scripts/testbed-test.sh",
+    "test:framework": "bun test packages/framework/src"
   },
   "dependencies": {
     "prettier": "^3.7.4"
